Cleans a little part of english translations

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -415,7 +415,7 @@ fra:
       # show: "Show backend/product link"
     backend/product_localizations:
       edit: "Modifier une localisation d’un produit"
-      index: "Tracabilité des produits"
+      index: "Localisation des produits"
       new: "Nouvelle localisation d’un produit"
       show: "Détail d’une localisation d’un produit"
     backend/product_memberships:
@@ -690,7 +690,7 @@ fra:
     backend/product_groups: "Lot de produits"
     # backend/product_indicator_data: "Backend/product indicator data"
     # backend/product_links: "Backend/product links"
-    backend/product_localizations: "Tracabilité"
+    backend/product_localizations: "Localisations"
     # backend/product_memberships: "Backend/product memberships"
     backend/product_moves: "Mouvements de stock"
     backend/product_nature_categories: "Catégories de type de produits"
@@ -873,7 +873,6 @@ fra:
     building_tabbox:
       stock_moves: "Mouvements de stock"
       stocks: "Stocks"
-    building_update: "Modifier le lieu de stockage"
     buildings: "Voir la liste des lieux de stockage"
     calendar: "Calendrier"
     canals: "Coordonnées"
@@ -997,7 +996,6 @@ fra:
     duration_in_hours_and_minutes: "%{hours}h %{minutes}min"
     edit: "Modifier"
     ekylibre: "www.ekylibre.org"
-    elevage_rss: "Actualité élevage"
     email: "Email:"
     employee_name: "Employé"
     end: "au"
@@ -1303,9 +1301,7 @@ fra:
     page_title_special: "%{company_code} - %{action}"
     paid_amount: "Montant réglé"
     paid_on: "Réglé le"
-    paids: "Réglements"
     parameters: "Paramètres"
-    parts_amount: "Montant réglé"
     passive_balance_sheet: "Bilan passif"
     passive_capital_sum: "Total capitaux"
     passive_debt_sum: "Total dettes"
@@ -1399,7 +1395,6 @@ fra:
     record_has_not_been_removed: "L’enregistrement n’a pu être supprimé."
     reflect: "Refléter"
     refresh: "Rafraîchir"
-    register: "Créer une nouvelle société"
     relationship: "Gestion des relations clients/fournisseurs"
     remove_diagnostic: "Supprimer un diagnostic"
     remove_indicator_datum: "Supprimer une mesure pour un indicateur"
@@ -1530,7 +1525,6 @@ fra:
     supports: "Supports de production"
     synthesis: "Documents de synthèse"
     target: "Cible"
-    tax_declaration_create: "Ajouter une nouvelle déclaration"
     theoric_quantity: "Quantité théorique"
     third_informations: "Informations tierces"
     to: "Au"
@@ -1589,7 +1583,6 @@ fra:
     use_incoming_payment: "Rattacher l’encaissement %{payment}"
     use_renew: "Sélectionnez un journal pour reporter les à nouveaux"
     user_name: "Nom d’utilisateur"
-    user_update: "Modifier les informations de l’utilisateur"
     users: "Compte utilisateur"
     uses: "Matériel"
     valid: "Valider"
