--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -380,7 +380,7 @@ jpn:
     backend/product_links: #?
     backend/product_localizations:
       # edit: "Modifier une localisation d’un produit"
-      # index: "Tracabilité des produits"
+      # index: "Localisation des produits"
       # new: "Nouvelle localisation d’un produit"
       # show: "Détail d’une localisation d’un produit"
     backend/product_memberships: #?
@@ -593,7 +593,7 @@ jpn:
     # backend/outgoing_payments: "Décaissements"
     # backend/preferences: "Préférences"
     # backend/product_groups: "Lot de produits"
-    # backend/product_localizations: "Tracabilité"
+    # backend/product_localizations: "Localisations"
     # backend/product_moves: "Mouvements de stock"
     # backend/product_nature_categories: "Catégories de type de produits"
     # backend/product_natures: "Types de produits"
@@ -764,7 +764,6 @@ jpn:
     building_tabbox:
       # stock_moves: "Mouvements de stock"
       # stocks: "Stocks"
-    # building_update: "Modifier le lieu de stockage"
     # buildings: "Voir la liste des lieux de stockage"
     # calendar: "Calendrier"
     # canals: "Coordonnées"
@@ -889,7 +888,6 @@ jpn:
     # duration_in_hours_and_minutes: "%{hours}h %{minutes}min"
     # edit: "Modifier"
     ekylibre: "www.ekylibre.org"
-    # elevage_rss: "Actualité élevage"
     # email: "Email:"
     # employee_name: "Employé"
     # end: "au"
@@ -1200,9 +1198,7 @@ jpn:
     page_title_special: "%{company_code} - %{action}"
     # paid_amount: "Montant réglé"
     # paid_on: "Réglé le"
-    # paids: "Réglements"
     # parameters: "Paramètres"
-    # parts_amount: "Montant réglé"
     # passive_balance_sheet: "Bilan passif"
     # passive_capital_sum: "Total capitaux"
     # passive_debt_sum: "Total dettes"
@@ -1297,7 +1293,6 @@ jpn:
     # record_has_not_been_removed: "L’enregistrement n’a pu être supprimé."
     # reflect: "Refléter"
     # refresh: "Rafraîchir"
-    # register: "Créer une nouvelle société"
     # relationship: "Gestion des relations clients/fournisseurs"
     # remove_diagnostic: "Supprimer un diagnostic"
     # remove_indicator_datum: "Supprimer une mesure pour un indicateur"
@@ -1428,7 +1423,6 @@ jpn:
     # supports: "Supports de production"
     # synthesis: "Documents de synthèse"
     # target: "Cible"
-    # tax_declaration_create: "Ajouter une nouvelle déclaration"
     # theoric_quantity: "Quantité théorique"
     # third_informations: "Informations tierces"
     # to: "Au"
@@ -1487,7 +1481,6 @@ jpn:
     # use_incoming_payment: "Rattacher l’encaissement %{payment}"
     # use_renew: "Sélectionnez un journal pour reporter les à nouveaux"
     user_name: "ユーザー名"
-    # user_update: "Modifier les informations de l’utilisateur"
     # users: "Compte utilisateur"
     # uses: "Matériel"
     # valid: "Valider"
