--- a/config/locales/eng/help/animal_medicines-index.txt
+++ b/config/locales/eng/help/animal_medicines-index.txt
@@ -1,8 +1,8 @@
-====== Produits vétérinaires ======
+====== Veterinary products ======
 
-Vous avez accès au récapitulatif de tous vos produits vétérinaires.
+You can access the summary for all the veterinary products.
 
->>> Vous pouvez consulter le site de l'ANSES (http://www.ircp.anmv.anses.fr) pour connaître les élèments de réglementation concernant ces produits
+>>> You can consult the website of l'ANSES (http://www.ircp.anmv.anses.fr) in order to learn the informations about the regulations regarding this products
 
-!!! L'ajout d'un produit vétérinaire se fait obligatoirement via les [[>backend/incoming_deliveries|approvisionnements]]
+!!! The addition of a veterinary product is done necessarily via the [[>backend/incoming_deliveries|provisions]]
 
