--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -382,10 +382,10 @@ jpn:
       # show: "Procédure\_: %{name}"
     backend/product_abilities: #?
     backend/product_groups:
-      # edit: "Modifier le lot\_: %{name} "
-      # index: "Lots de produits"
-      # new: "Créer un lot"
-      # show: "Lot\_: %{name}"
+      # edit: "Modifier le groupe\_: %{name} "
+      # index: "Groupes de produits"
+      # new: "Créer un groupe"
+      # show: "Groupe\_: %{name}"
     backend/product_indicator_choices: #?
     backend/product_indicator_data:
       # edit: "Modifier la valeur d’un indicateur"
@@ -835,6 +835,7 @@ jpn:
     # consult: "Consulter"
     # contact: "à l’adresse"
     # contains: "Contient"
+    # content_products: "Produits contenus"
     # contextual_help: "Aide contextuelle"
     # coordinates: "Coordonnées"
     # copy_of: "Copie de %{source}"
@@ -1076,6 +1077,7 @@ jpn:
     # medicines: "Remèdes"
     # meeting: "Lieu(x) de rencontre"
     # meetings: "Évènements"
+    # members: "Membres"
     menu:  #?
       accountancy_tasks: "用事" #?
       parameters: "パラメーター" #?
