clean and add nature name on product title in show view.

--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -473,7 +473,7 @@ eng:
       edit: "Edit the product: %{name}"
       index: "Products"
       new: "Add a new product"
-      show: "Product: %{name}"
+      show: "%{nature_name}\_: %{name}"
     backend/professions:
       edit: "Edit profession"
       index: "Professions"
@@ -733,7 +733,7 @@ eng:
     active_sum: "Total Assets"
     activity: "Activity"
     add: "Add"
-    # add_choice: "Ajouter un choix"
+    add_choice: "Add choice"
     add_condition: "Add condition"
     add_conditions: "Add conditions"
     add_delivery: "Add delivery"
@@ -749,7 +749,7 @@ eng:
     add_payment: "Add payment"
     add_phone: "Add phone number"
     # add_posology: "Ajouter une posologie"
-    # add_production: "Ajouter une production"
+    add_production: "Add production"
     add_quickly_a_line: "Add quickly a line of product" #?
     # add_quickly_an_item: "Ajouter rapidement une ligne de produit"
     add_subscription_for_sale_line: "Add subscription for sale line #%{position}"
@@ -760,7 +760,7 @@ eng:
     # add_x: "Ajouter «\_%{x}\_»"
     # add_x_html: "Ajouter «\_%{x}\_»"
     address: "Address"
-    # affair: "Affaire"
+    affair: "Affair"
     all: "All"
     all_accounts: "All accounts"
     all_areas: "All postal areas"
@@ -770,7 +770,7 @@ eng:
     amount: "Amount with taxes"
     amount_to_add: "Total to add"
     amount_to_reduce: "Total to reduce"
-    # amount_with_taxes: "Montant TTC"
+    amount_with_taxes: "Amount with taxes"
     analytics: "Analytics"
     animal: "Animal"
     animal_bar: "Animals by category"
@@ -880,7 +880,7 @@ eng:
     consult: "Consult"
     contact: "At"
     contains: "Contains"
-    # content_products: "Produits contenus"
+    content_products: "Content products"
     contextual_help: "Help on current page"
     coordinates: "Coordinates"
     copy_of: "Copy of %{source}"
@@ -1124,7 +1124,7 @@ eng:
     # medicines: "Remèdes"
     meeting: "Meeting"
     meetings: "Meetings"
-    # members: "Membres"
+    members: "Members"
     menus:
       accountancy: "Accountancy"
       archives: "Archives"
@@ -1609,9 +1609,9 @@ eng:
       other: "%{count} incoming payments"
       zero: "0 incoming payments"
     x_indicators:
-      # one: "%{count} indicateur"
-      # other: "%{count} indicateurs"
-      # zero: "0 indicateur"
+      one: "%{count} indicator"
+      other: "%{count} indicators"
+      zero: "No indicator"
     x_items_remain_on_y:
       # one: "%{count} élément restant."
       # other: "%{count} éléments non visibles. Affinez votre recherche."
@@ -1622,7 +1622,7 @@ eng:
     x_mandates:
       one: "%{count} mandate"
       other: "%{count} mandates"
-      # zero: "0 responsabilité"
+      zero: "no mandate"
     x_meetings:
       # one: "%{count} évènement"
       # other: "%{count} évènements"
